--- a/ios/Podfile
+++ b/ios/Podfile
@@ -38,6 +38,8 @@ target 'GroupListen' do
 
   pod 'react-native-camera', :path => '../node_modules/react-native-camera'
 
+  pod 'RNFS', :path => '../node_modules/react-native-fs'
+
   target 'GroupListenTests' do
     inherit! :search_paths
     # Pods for testing
