--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "react": "16.9.0",
     "react-native": "0.61.2",
+    "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
+    "react-native-fs": "^2.14.1",
     "react-native-gesture-handler": "^1.4.1",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.9.4"
